$Date$

VEGAN DEVEL VERSIONS at http://r-forge.r-project.org/

Version 2.1-0 (opened September 8, 2011)

	* New major version opened with the release of vegan_2.0-0 on
	September 8, 2011.

	* commsimulator: a bit less overhead -- all attributes set
	simultaneously instead of setting separately dim, rownames and
	colnames. The results should be identical(), running should be
	marginally faster or neutral.

	* permatswap: there was a bug in internal C routine, and therefore
	not all permissible swaps were performed. Based on limited
	analysis, the effects of this bug seem to be negligible.  It is,
	however, recommended to re-run all analyses. The C code was made
	faster by getting quickly out from isDiag* if there are only 0 or
	1 filled items, because there is nothing to swap. Tests show that
	the C code indeed is ca 10% faster in permatswap(BCI,
	method="swa", thin=1000, times=999), but only a 20-25% of time was
	spent in C, and the new permatswap/permatswap1 spends 2.2x longer
	in other parts. With faster C code the net slowdown is 1.7x.

	* various attemps of speed-up (often in vain): The speed-up
	started with permatfull/permatswap which appeared to be by far the
	slowest functions in R CMD check --timings. Later this proved to
	be a feature of checking these functions in MacBook Air/MacOS X:
	the functions were not slow in Linux, nor in MacBook when the very
	same tests were run outside R CMD check. However, several changes
	were made: 

	- permatfull/permatswap avoid data.frame/matrix casting, and save
	results in matrices. This was based on misleading test statistics
	in MacOS, and it is not sure what are the real effects.
	- commsimulator: smaller overhead.
	- sample.int was used in place of sample in commsimulator,
	nesteddisc, permuted.index and poolaccum (the effects may be
	measurable for permuted.index, but not large).
	- centroids.cca: much faster. This was perhaps real -- profiling
	(not timing) showed that cca.formula/rda.formula have a large